--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.2.1",
+    "react-router": "^2.6.0",
     "redux": "^3.2.1",
     "redux-logger": "^2.0.1",
     "redux-thunk": "^1.0.0",
